--- a/index.html
+++ b/index.html
@@ -1,85 +1,85 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640" />
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Bikes-timeline-qt by arnabkd</title>
-  </head>
+  <title>Bikes-timeline-qt</title>
+  <meta name="description" content="Qt, C++">
 
-  <body>
-    <a id="forkme_banner" href="https://github.com/arnabkd/bikes-timeline-qt">View on GitHub</a>
-    <div class="shell">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Bikes-timeline-qt</h1>
-            <h2>Qt, C++</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+</head>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/arnabkd/bikes-timeline-qt/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/arnabkd/bikes-timeline-qt/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+<body>
 
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h3>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Bikes-timeline-qt</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">Qt, C++</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/arnabkd/bikes-timeline-qt/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/arnabkd/bikes-timeline-qt/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/arnabkd/bikes-timeline-qt" class="code">View Bikes-timeline-qt on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h3>
 <a name="welcome-to-bikeracks---timeline" class="anchor" href="#welcome-to-bikeracks---timeline"><span class="octicon octicon-link"></span></a>Welcome to BikeRacks - timeline</h3>
 
 <h3>
 <a name="background" class="anchor" href="#background"><span class="octicon octicon-link"></span></a>Background</h3>
 
-<p>My master's thesis involves using machine learning to predict traffic patterns in bikeshare systems across the globe. As part of that work, I have a dataset for the bikeshare system in Oslo (currently operated by ClearChannel). The dataset includes locations, capacities and rack status for all racks in the Oslo area between April and November 2013</p>
+<p>My master's thesis involves using machine learning to predict traffic patterns in bikeshare systems across the globe. As part of that work, I have a dataset for the bikeshare system in Oslo (currently operated by ClearChannel). The dataset includes locations, capacities and rack status for all racks in the Oslo area between April and November 2013.</p>
+
+<h3>
+<a name="the-app" class="anchor" href="#the-app"><span class="octicon octicon-link"></span></a>The app</h3>
+
+<p>This app shows a visual representation of the dataset mentioned above.</p>
 
 <h3>
 <a name="details" class="anchor" href="#details"><span class="octicon octicon-link"></span></a>Details</h3>
 
 <ul>
-<li>Data collection done by Martin Stensgård</li>
+<li>Data collection done by Martin Stensgård <a href="https://github.com/mastensg" class="user-mention">@mastensg</a>
+</li>
 <li>Original source: <a href="http://www.bysykler.no/oslo/kart-over-sykkelstativer">http://www.bysykler.no/oslo/kart-over-sykkelstativer</a>
 </li>
 <li>Developed by <a href="https://github.com/arnabkd" class="user-mention">@arnabkd</a>
 </li>
 </ul>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/arnabkd">arnabkd</a> can be found on <a href="https://github.com/arnabkd/bikes-timeline-qt">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/arnabkd" class="avatar"><img src="https://avatars2.githubusercontent.com/u/1014699?s=60" width="48" height="48"/></a> <a href="https://github.com/arnabkd">arnabkd</a> maintains <a href="https://github.com/arnabkd/bikes-timeline-qt">Bikes-timeline-qt</a></p>
 
-    
-  </body>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/arnabkd/bikes-timeline-qt/tarball/master" class="tar">tar</a><a href="https://github.com/arnabkd/bikes-timeline-qt/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
