Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,21 +39,22 @@
 
 <p>My master's thesis involves using machine learning to predict traffic patterns in bikeshare systems across the globe. As part of that work, I have a dataset for the bikeshare system in Oslo (currently operated by ClearChannel), along with datasets for London, New York, Washington D.C. and Chicago, IL. </p>
 
-<h3>
-<a name="the-app" class="anchor" href="#the-app"><span class="octicon octicon-link"></span></a>The app</h3>
+<h2>
+<a name="the-app" class="anchor" href="#the-app"><span class="octicon octicon-link"></span></a>The app</h2>
 
 <p>This app shows a visual representation of the dataset mentioned above.</p>
 
-<h3>
-<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h3>
+<h2>
+<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
 
 <ol>
 <li>Compile the application and launch it.</li>
+<li>Uncompress the zip files in the <code>example-data</code> folder.</li>
 <li>In the app, browse to one of the sub-folders under the <code>example-data</code> folder.</li>
 <li>Click "Ok" and wait for the dataset to be loaded.</li>
 <li>Click play (or press the spacebar) and enjoy the animation!</li>
-</ol><h3>
-<a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
+</ol><h2>
+<a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h2>
 
 <p><br><img src="https://raw.githubusercontent.com/arnabkd/bikes-timeline-qt/gh-pages/screenshots/pre-morning-rush.png" width="400,height=300"><br>
 Figure: Pre morning rush visualization of London bike racks</p>
@@ -61,8 +62,8 @@ Figure: Pre morning rush visualization of London bike racks</p>
 <p><br><img src="https://raw.githubusercontent.com/arnabkd/bikes-timeline-qt/gh-pages/screenshots/after-morning-rush.png" width="400,height=300"><br>
 Figure: Post morning rush visualization of London bike racks</p>
 
-<h3>
-<a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h3>
+<h2>
+<a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h2>
 
 <ul>
 <li>Based on Qt by Digia</li>
